# Remove-Background

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.ja.md  README.zh-CN.md  README.zh-TW.md
src/: __init__.py
src/backends/: __init__.py  backgroundremover.py  gemini_watermark.py  greenscreen.py  registry.py  rembg.py  transparent_bg.py
src/core/: __init__.py  interfaces.py  models.py  processor.py
src/postprocess/: __init__.py  green_screen.py
src/ui/: __init__.py  console.py  history.py  interactive.py
tests/: test_models.py
